fix event status label alignment

--- a/collectives/static/css/legacy/event/event-details.scss
+++ b/collectives/static/css/legacy/event/event-details.scss
@@ -74,10 +74,12 @@
 }
 
 span.event-status{
-  padding: 0 0.5em;
+  padding: 0.4em 0.5em 0.3em;
   color:  white;
   background-color: red;
   border-radius: 5px;
+  font-size: 1.2rem;
+  vertical-align: middle;
 }
 
 
